Fixed an overflow bug in the 'Footer' component

--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    padding-right: 40px;
 }
 
 #logo-footer{
@@ -14,7 +15,6 @@
     display: flex;
     margin-top: 30px;
     margin-left: 20px;
-    margin-right: 1100px;
     white-space: nowrap;
 }
 
@@ -22,13 +22,11 @@
     display: flex;
     flex-direction: row-reverse;
     flex-wrap: wrap;
-    margin-left: 300px;
 }
 
 #onde-estamos-footer{
     color: white;
     list-style-type: none;
-    margin-right: 150px;
 }
 
 #onde-estamos-footer a{
